# artifacts/api-server/src/routes/index.ts
@@ -1,14 +1,12 @@
 import { Router, type IRouter } from "express";
 import healthRouter from "./health";
-import configRouter from "./config";
-import monitorRouter from "./monitor";
+import walletsRouter from "./wallets";
 import transfersRouter from "./transfers";
 
 const router: IRouter = Router();
 
 router.use(healthRouter);
-router.use(configRouter);
-router.use(monitorRouter);
+router.use(walletsRouter);
 router.use(transfersRouter);
 
 export default router;
